# synology-download

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: dependabot_auto.yml  dependabot_pr.yml  pylint.yml  pytest.yml  release.yml
NasDownload/: nas.py
nas_unzip/: nas.py
tests/: test_download.py
