[tool.poetry]
name = "nas_unzip"
version = "0.1.0"
description = ""
authors = ["Nathan Hui <nthui@eng.ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
synology-api = "0.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.1.0"
pylint = "^2.16.2"
wheel = "^0.38.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
